--- a/index.html
+++ b/index.html
@@ -630,11 +630,13 @@
         font-size: 15px;
     }
     .hero-header {
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-        justify-content: space-between;
-        padding: 0 4vw 0 2vw;
+        /* Changed to column to stack logo and navigation vertically */
+        flex-direction: column;
+        /* Centered horizontally when items are stacked vertically */
+        align-items: center;
+        /* Remove space-between as it's for row distribution */
+        /* justify-content: space-between; */
+        padding: 0 4vw 0 2vw; /* Keep padding values, but consider if they still make sense vertically */
         margin-top: 14px;
         width: 100vw;
         max-width: 100vw;
@@ -643,8 +645,9 @@
     }
     .hero-logo-col {
         flex: 0 0 auto;
-        margin-right: 0px;
+        margin-right: 0px; /* Reset margin */
         margin-top: 0px;
+        margin-bottom: 10px; /* Added space below the logo */
     }
     .logo-circle {
         padding: 8px;
@@ -653,17 +656,19 @@
     .hero-nav-col {
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
+        /* Changed to center to align title/subtitle under the logo */
+        align-items: center;
         flex-grow: 1;
-        width: 70%;
-        max-width: 250px;
+        width: 90%; /* Adjust width to better fit centered content */
+        max-width: 300px; /* Allow wider than 250px if content is centered */
         margin: 0;
         padding: 0;
         margin-top: 0px;
+        text-align: center; /* Ensure text alignment is centered within its column */
     }
     .hero-nav-title {
-        text-align: right;
-        width: 90%;
+        text-align: center; /* Changed to center */
+        width: 100%; /* Take full width of its column */
         font-size: 1.5rem; /* Made smaller for mobile */
         -webkit-text-stroke: 1.5px #000;
         text-stroke: 1.5px #000;
@@ -674,8 +679,8 @@
         padding-left: 0; /* Reset padding for mobile */
     }
     .hero-nav-subtitle {
-        text-align: right;
-        width: 90%;
+        text-align: center; /* Changed to center */
+        width: 100%; /* Take full width of its column */
         font-size: 1.5rem; /* Made smaller for mobile */
         text-shadow:
             -1.5px -1.5px 0 #000,
@@ -696,14 +701,23 @@
     .hopped-toad-container {
         position: static; /* Adjust positioning for mobile */
         display: flex;
-        justify-content: flex-start;
-        width: 100%;
-        margin-top: 10px; /* Space below the title */
-        transform: none;
+        flex-wrap: wrap; /* NEW: Allows toads to wrap to the next line */
+        justify-content: center; /* NEW: Centers the toads within each row */
+        width: 100%; /* Ensures the container takes full width for wrapping */
+        margin-top: 10px; /* Space below the title/subtitle */
+        transform: none; /* Reset any previous transforms */
+        padding: 0 2vw; /* Add some horizontal padding to the container itself */
+        box-sizing: border-box; /* Include padding in the width calculation */
+        gap: 5px; /* NEW: Adds spacing between toads */
     }
     .hopped-toad {
-        width: 1.2em;
-        height: 1.2em;
+        /* NEW: Each toad takes 25% of the container width, for 4 per row */
+        flex: 0 0 25%; /* flex-grow: 0, flex-shrink: 0, flex-basis: 25% */
+        max-width: 25%; /* Ensures it doesn't exceed 25% */
+        height: auto; /* Maintain aspect ratio */
+        /* Removed fixed width/height like 1.2em as flex-basis now controls sizing */
+        /* padding: 2px; /* You can add internal padding if 'gap' isn't enough */
+        /* box-sizing: border-box; */
     }
 
     .main-links {
