--- a/index.html
+++ b/index.html
@@ -629,28 +629,24 @@
     html, body {
         font-size: 15px;
     }
-    .hero-header {
-        display: grid; /* Changed to CSS Grid for precise area positioning */
-        /* Define grid areas for logo, navigation, and toads */
-        grid-template-columns: auto 1fr; /* First column (logo) auto-width, second (nav) takes rest */
-        grid-template-rows: auto auto; /* First row for logo/nav, second row for toads */
+   .hero-header {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        grid-template-rows: auto auto;
         grid-template-areas:
-            "logo nav"    /* Top row: logo on left, nav on right */
-            "toads .";    /* Bottom row: toads under logo, empty cell next to it */
-        
-        /* Remove original flex properties that conflict with grid */
-        /* display: flex; */
-        /* flex-direction: row; */
-        /* align-items: flex-start; */
-        /* justify-content: space-between; */
-        
-        padding: 0 4vw 0 2vw; /* Keep your existing padding */
+            "logo nav"
+            "toads .";
+        align-items: start;
+        padding: 0 4vw 0 2vw;
         margin-top: 14px;
         width: 100vw;
         max-width: 100vw;
         box-sizing: border-box;
         position: relative;
-        min-height: 150px; /* Ensure enough height for both logo/nav and stacked toads */
+        /* NEW: Set a minimum height for the header */
+        min-height: 120px; /* Adjust this value as needed */
+        /* This min-height should be enough to contain your logo and
+           the maximum expected height of your title/subtitle without pushing the logo down. */
     }
 
     .hero-logo-col {
