--- a/index.html
+++ b/index.html
@@ -630,54 +630,54 @@
         font-size: 15px;
     }
    .hero-header {
-        display: grid;
-        grid-template-columns: auto 1fr;
-        grid-template-rows: auto auto;
-        grid-template-areas:
-            "logo nav"
-            "toads .";
-        align-items: start;
+        /* This creates the two main columns (left: logo+toads, right: title/subtitle) */
+        display: flex; /* Use flexbox for the main 2-column layout */
+        flex-direction: row; /* Keep content side-by-side */
+        align-items: flex-start; /* Align columns to the top */
+        justify-content: space-between; /* Space between logo column and nav column */
+        
         padding: 0 4vw 0 2vw;
         margin-top: 14px;
         width: 100vw;
         max-width: 100vw;
         box-sizing: border-box;
         position: relative;
-        /* NEW: Set a minimum height for the header */
-        min-height: 120px; /* Adjust this value as needed */
-        /* This min-height should be enough to contain your logo and
-           the maximum expected height of your title/subtitle without pushing the logo down. */
+        min-height: auto; /* Let content define height now */
     }
 
     .hero-logo-col {
-        grid-area: logo; /* Assign this to the 'logo' area in the grid */
-        flex: 0 0 auto; /* Keep these if they don't interfere with grid's sizing */
+        /* NEW: This column now stacks its contents (logo and toads) vertically */
+        display: flex;
+        flex-direction: column;
+        align-items: center; /* Center logo and toads horizontally within this left column */
+        
+        flex: 0 0 auto;
         margin-right: 0px;
         margin-top: 0px;
-        margin-bottom: 10px; /* Add space below the logo before the toads */
+        /* margin-bottom handled by logo-circle now */
     }
 
     .logo-circle {
         padding: 8px;
-        margin-bottom: 0;
+        margin-bottom: 10px; /* Add space below the logo, above the toads */
     }
 
     .hero-nav-col {
-        grid-area: nav; /* Assign this to the 'nav' area in the grid */
         display: flex;
         flex-direction: column;
-        align-items: flex-end; /* Keep alignment to the right for title/subtitle */
+        align-items: flex-end; /* Keep title/subtitle aligned to the right */
+        align-self: center; /* Vertically center this column within the header */
         flex-grow: 1;
-        width: 100%; /* Take full width of its grid cell */
-        max-width: none; /* Remove max-width that might constrain in grid */
+        width: 100%; /* Take full width of its container */
+        max-width: none;
         margin: 0;
         padding: 0;
         margin-top: 0px;
     }
     .hero-nav-title {
-        text-align: right; /* Keep text aligned to the right */
+        text-align: right;
         width: 90%;
-        font-size: 3rem;
+        font-size: 1.5rem;
         -webkit-text-stroke: 1.5px #000;
         text-stroke: 1.5px #000;
         margin-bottom: 8px;
@@ -687,9 +687,9 @@
         padding-left: 0;
     }
     .hero-nav-subtitle {
-        text-align: right; /* Keep text aligned to the right */
+        text-align: right;
         width: 90%;
-        font-size: 3rem;
+        font-size: 1.5rem;
         text-shadow:
             -1.5px -1.5px 0 #000,
             1.5px -1.5px 0 #000,
@@ -707,31 +707,29 @@
     }
 
     #hoppedToadContainer {
-        grid-area: toads; /* Assign this to the 'toads' area in the grid */
-        /* It will now naturally position under the 'logo' grid area */
-        position: static; /* Ensure it flows within the grid, not absolutely positioned */
+        /* These styles make the toads stack in rows of 4 */
+        position: static; /* Ensure it's in normal flow within .hero-logo-col */
         display: flex;
-        flex-wrap: wrap; /* Allow toads to wrap into rows */
+        flex-wrap: wrap;
         justify-content: center; /* Center the toads within their rows */
-        width: 100%; /* Take full width of its grid cell */
-        margin-top: 0; /* Margin handled by grid or hero-logo-col margin-bottom */
-        transform: none; /* Reset any desktop transforms */
-        box-sizing: border-box; /* Include padding in width calculation */
+        width: 100%; /* Take full width of its parent (.hero-logo-col) */
+        margin-top: 0; /* No top margin needed, spacing handled by logo-circle margin-bottom */
+        transform: none;
+        box-sizing: border-box;
         padding: 0 5px; /* Small horizontal padding inside the container */
-        gap: 5px; /* Add gap between toads */
-        z-index: 5; /* Adjust z-index if toads are overlapping other content */
+        gap: 5px; /* Gap between toads */
+        z-index: 5;
     }
     .hopped-toad {
         flex: 0 0 25%; /* Each toad takes 25% of the container width for 4 per row */
-        max-width: 25%; /* Ensures it doesn't exceed 25% */
-        height: auto; /* Maintain aspect ratio */
-        /* Removed fixed width/height like 1.2em as flex-basis will control it */
+        max-width: 25%;
+        height: auto;
     }
 
     /* Your existing .main-links and .news-banner styles (unchanged) */
     .main-links {
         position: absolute;
-        top: 200px;
+        top: 200px; /* Adjust this value if the links appear too high or low */
         left: 2vw;
         width: fit-content;
         min-width: 180px;
@@ -791,7 +789,6 @@
         filter: brightness(0) invert(1) !important;
     }
 }
-
     /* Hover styles for mobile links */
     .main-links a:hover,
     .main-links a:focus {
