--- a/index.html
+++ b/index.html
@@ -933,16 +933,19 @@
         <button class="close-banner-btn" aria-label="Close banner">&times;</button>
     </div>
     <section class="hero" id="hero">
-      <div class="hero-header">
-        <div class="hero-logo-col">
-          <div class="logo-circle">
+     <div class="hero-header">
+    <div class="hero-logo-col">
+        <div class="logo-circle">
             <img src="images/Lazy toad site logo 3.png" alt="Lazy Toad Studios Logo" class="hero-logo">
-          </div>
         </div>
-        <div class="hopped-toad-container" id="hoppedToadContainer"></div> <div class="hero-nav-col">
-          <div class="hero-nav-title">
+        <div class="hopped-toad-container" id="hoppedToadContainer"></div> 
+    </div>
+    <div class="hero-nav-col">
+        <div class="hero-nav-title">
             LAZY TOAD STUDIOS
-          </div>
+        </div>
+        </div>
+</div>
           <div class="hero-nav-subtitle">怠け者なヒキガエルのスタジオ</div>
           <nav class="main-links">
             <a href="/shop.html" class="shop" title="Shop">
