--- a/index.html
+++ b/index.html
@@ -630,54 +630,54 @@
         font-size: 15px;
     }
    .hero-header {
-        /* This sets up the main two columns (left: logo+toads, right: title/subtitle) */
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-        justify-content: space-between;
-        
+        display: grid;
+        grid-template-columns: auto 1fr;
+        grid-template-rows: auto auto;
+        grid-template-areas:
+            "logo nav"
+            "toads .";
+        align-items: start;
         padding: 0 4vw 0 2vw;
         margin-top: 14px;
         width: 100vw;
         max-width: 100vw;
         box-sizing: border-box;
         position: relative;
-        min-height: auto;
+        /* NEW: Set a minimum height for the header */
+        min-height: 120px; /* Adjust this value as needed */
+        /* This min-height should be enough to contain your logo and
+           the maximum expected height of your title/subtitle without pushing the logo down. */
     }
 
     .hero-logo-col {
-        /* *** This is the crucial part that now stacks the logo AND toads vertically *** */
-        display: flex;         /* Make this inner column a flex container */
-        flex-direction: column; /* Stack its children (logo-circle and hoppedToadContainer) vertically */
-        align-items: center;   /* Center children horizontally within this column */
-        /* ************************************************************************* */
-
-        flex: 0 0 auto; /* Allow this column to shrink/grow based on content, but prefer not to */
+        grid-area: logo; /* Assign this to the 'logo' area in the grid */
+        flex: 0 0 auto; /* Keep these if they don't interfere with grid's sizing */
         margin-right: 0px;
         margin-top: 0px;
+        margin-bottom: 10px; /* Add space below the logo before the toads */
     }
 
     .logo-circle {
         padding: 8px;
-        margin-bottom: 10px; /* Adds space below the logo, above the toads */
+        margin-bottom: 0;
     }
 
     .hero-nav-col {
+        grid-area: nav; /* Assign this to the 'nav' area in the grid */
         display: flex;
         flex-direction: column;
-        align-items: flex-end; /* Keep title/subtitle aligned to the right */
-        align-self: center; /* Vertically center this column within the header */
-        flex-grow: 1; /* Allow this column to take up remaining horizontal space */
-        width: 100%; /* Take full width of its container (which is its flex item space) */
-        max-width: none;
+        align-items: flex-end; /* Keep alignment to the right for title/subtitle */
+        flex-grow: 1;
+        width: 100%; /* Take full width of its grid cell */
+        max-width: none; /* Remove max-width that might constrain in grid */
         margin: 0;
         padding: 0;
         margin-top: 0px;
     }
     .hero-nav-title {
-        text-align: right;
+        text-align: right; /* Keep text aligned to the right */
         width: 90%;
-        font-size: 1.5rem;
+        font-size: 3rem;
         -webkit-text-stroke: 1.5px #000;
         text-stroke: 1.5px #000;
         margin-bottom: 8px;
@@ -687,9 +687,9 @@
         padding-left: 0;
     }
     .hero-nav-subtitle {
-        text-align: right;
+        text-align: right; /* Keep text aligned to the right */
         width: 90%;
-        font-size: 1.5rem;
+        font-size: 3rem;
         text-shadow:
             -1.5px -1.5px 0 #000,
             1.5px -1.5px 0 #000,
@@ -706,30 +706,32 @@
         line-height: 1.2;
     }
 
-    /* Styles for the toad container itself (inside .hero-logo-col) */
-    .hopped-toad-container { /* Added class selector to be consistent with your HTML */
-        position: static;
+    #hoppedToadContainer {
+        grid-area: toads; /* Assign this to the 'toads' area in the grid */
+        /* It will now naturally position under the 'logo' grid area */
+        position: static; /* Ensure it flows within the grid, not absolutely positioned */
         display: flex;
-        flex-wrap: wrap;
-        justify-content: center; /* Centers the toads within their rows */
-        width: 100%; /* Take full width of its parent (.hero-logo-col) */
-        margin-top: 0;
-        transform: none;
-        box-sizing: border-box;
+        flex-wrap: wrap; /* Allow toads to wrap into rows */
+        justify-content: center; /* Center the toads within their rows */
+        width: 100%; /* Take full width of its grid cell */
+        margin-top: 0; /* Margin handled by grid or hero-logo-col margin-bottom */
+        transform: none; /* Reset any desktop transforms */
+        box-sizing: border-box; /* Include padding in width calculation */
         padding: 0 5px; /* Small horizontal padding inside the container */
-        gap: 5px; /* Gap between toads */
-        z-index: 5;
+        gap: 5px; /* Add gap between toads */
+        z-index: 5; /* Adjust z-index if toads are overlapping other content */
     }
     .hopped-toad {
         flex: 0 0 25%; /* Each toad takes 25% of the container width for 4 per row */
-        max-width: 25%;
-        height: auto;
+        max-width: 25%; /* Ensures it doesn't exceed 25% */
+        height: auto; /* Maintain aspect ratio */
+        /* Removed fixed width/height like 1.2em as flex-basis will control it */
     }
 
     /* Your existing .main-links and .news-banner styles (unchanged) */
     .main-links {
         position: absolute;
-        top: 200px; /* Adjust this value if the links appear too high or low */
+        top: 200px;
         left: 2vw;
         width: fit-content;
         min-width: 180px;
@@ -788,7 +790,8 @@
     .main-links a:hover .icon {
         filter: brightness(0) invert(1) !important;
     }
-    
+}
+
     /* Hover styles for mobile links */
     .main-links a:hover,
     .main-links a:focus {
@@ -932,43 +935,42 @@
         <button class="close-banner-btn" aria-label="Close banner">&times;</button>
     </div>
     <section class="hero" id="hero">
-     <div class="hero-header">
+      <div class="hero-header">
         <div class="hero-logo-col">
-            <div class="logo-circle">
-                <img src="images/Lazy toad site logo 3.png" alt="Lazy Toad Studios Logo" class="hero-logo">
-            </div>
-            <div class="hopped-toad-container" id="hoppedToadContainer"></div> 
+          <div class="logo-circle">
+            <img src="images/Lazy toad site logo 3.png" alt="Lazy Toad Studios Logo" class="hero-logo">
+          </div>
         </div>
-        <div class="hero-nav-col">
-            <div class="hero-nav-title">
-                LAZY TOAD STUDIOS
-            </div>
-            <div class="hero-nav-subtitle">怠け者なヒキガエルのスタジオ</div>
-            <nav class="main-links">
-                <a href="/shop.html" class="shop" title="Shop">
-                  <span class="icon" aria-hidden="true"></span>
-                  Shop
-                </a>
-                <a href="/contact.html" class="contact" title="Contact">
-                  <span class="icon" aria-hidden="true"></span>
-                  Contact
-                </a>
-                <a href="/about.html" class="about" title="About">
-                  <span class="icon" aria-hidden="true"></span>
-                  About
-                </a>
-                <a href="/work.html" class="work" title="Work">
-                  <span class="icon" aria-hidden="true"></span>
-                  Work
-                </a>
-            </nav>
-            </div>
-    </div>
-    <div class="solid-separator-top"></div>
+        <div class="hopped-toad-container" id="hoppedToadContainer"></div> <div class="hero-nav-col">
+          <div class="hero-nav-title">
+            LAZY TOAD STUDIOS
+          </div>
+          <div class="hero-nav-subtitle">怠け者なヒキガエルのスタジオ</div>
+          <nav class="main-links">
+            <a href="/shop.html" class="shop" title="Shop">
+              <span class="icon" aria-hidden="true"></span>
+              Shop
+            </a>
+            <a href="/contact.html" class="contact" title="Contact">
+              <span class="icon" aria-hidden="true"></span>
+              Contact
+            </a>
+            <a href="/about.html" class="about" title="About">
+              <span class="icon" aria-hidden="true"></span>
+              About
+            </a>
+            <a href="/work.html" class="work" title="Work">
+              <span class="icon" aria-hidden="true"></span>
+              Work
+            </a>
+          </nav>
+        </div>
+      </div>
+      <div class="solid-separator-top"></div>
 
-    <div class="desktop-banner-container">
-        <div class="hero-images-spacing"></div>
-        <div class="hero-image-row">
+      <div class="desktop-banner-container">
+          <div class="hero-images-spacing"></div>
+          <div class="hero-image-row">
             <div class="hero-image-box" tabindex="0">
               <img src="images/walking temple website.jpg" alt="After the War" class="hero-image">
             </div>
@@ -981,16 +983,16 @@
             <div class="hero-image-box" tabindex="0">
               <img src="images/5 Joe Shenton - Remnants.jpg" alt="Transporter" class="hero-image">
             </div>
-        </div>
-        <div class="banner-images-spacing"></div>
-    </div>
+          </div>
+          <div class="banner-images-spacing"></div>
+      </div>
 
-    <div class="mobile-banner-container">
-        <img src="images/the botanist a4 website.jpg" alt="Featured Banner" class="banner-image-mobile" />
-    </div>
+      <div class="mobile-banner-container">
+          <img src="images/the botanist a4 website.jpg" alt="Featured Banner" class="banner-image-mobile" />
+      </div>
 
-    <div class="solid-separator-bottom"></div>
-</section>
+      <div class="solid-separator-bottom"></div>
+    </section>
     <section class="main-content hidden" id="mainContent">
         <div style="max-width: 700px; margin: 0px auto 0 auto; padding: 20px;">
     <h2 id="galleryHeader" class="gallery-section-header">Gallery</h2>
